syntax = "proto3";

option csharp_namespace = "GrpcServerProgram";

package admin;

// The greeting service definition.
service Admin {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  //Users 
  rpc PostUser(UserDTO) returns (MessageReply);
  rpc PutUser(UserDTO) returns (MessageReply);
  rpc DeleteUser(UserDTO) returns (MessageReply);

  //Profiles
  rpc PostProfile(ProfileDTO) returns (MessageReply);
  rpc PutProfile(ProfileDTO) returns (MessageReply);
  rpc DeleteProfile(ProfileDTO) returns (MessageReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message MessageReply {
	string message = 1;
}

//DTOs

 message UserDTO{
	string id = 1;
	string name = 2;
	string email = 3;
	string currentState = 4;
}

 message ProfileDTO{
	string id = 1;
	string description = 2;
	string abilities = 3;
	string image = 4;
}
